2004-09-13 Mikhail Khodjaiants
	Fix for bug 72555: "Toggle breakpoint" action doesn't remove function breakpoints from editor.
	* CDIDebugModel.java

2004-09-10 Mikhail Khodjaiants
	Fixes for breakpoint filtering.
	* CBreakpointManager.java
	* CBreakpoint.java
	* CDebugTarget.java

2004-09-09 Alain Magloire
	Introduction of new classes in the CDI interface
	* ICDIExecuteStep.java
	* ICDIExecuteStepReturn.java
	* ICDIExecuteResume.java
	* ICDISuspend.java
	* ICDIThreadGroup.java

2004-09-07 Mikhail Khodjaiants
	Fix for bug 73498: Condition is cleared when disabled conditional breakpoint is set.
	* CBreakpointManager.java	

2004-09-07 Alain Magloire
	Remove ICDIBreakpointManager.java
	Remove ICDICatchEvent/ICDICatchpoint
	add ICDIExceptionpoint

	* ICDISession.java
	* CDIDebugModel.java
	* CDebugTarget.java
	* ICDIExceptionpoint.java

2004-09-07 Mikhail Khodjaiants
	Moved to the new breakpoint management API.
	* CBreakpointManager.java

2004-09-07 Alain Magloire
	New interfaces to Target.
	* ICDITarget.java
	* ICDIBreakpointManagement.java

2004-09-03 Mikhail Khodjaiants
	Made global variables persistent.
	* CDIDebugModel.java
	* ICDTLaunchConfigurationConstants.java
	* ICGlobalVariableManager.java
	* ICGlobalVariable.java
	* IGlobalVariableDescriptor.java
	* InternalDebugCoreMessages.properties
	* CGlobalVariableManager.java
	* CDebugTarget.java
	* CGlobalVariable.java
	* CRegister.java
	* CVariableFactory.java

2004-09-01 Mikhail Khodjaiants
	Breakpoint filtering by targets (core).
	* ICBreakpoint.java
	* CBreakpointManager.java
	* CBreakpoint.java
	* CDebugTarget.java

2004-08-18 Mikhail Khodjaiants
	New constant - the default value for the "stop at main" property.
	* ICDTLaunchConfigurationConstants.java

2004-08-14 Alain Magloire
	Fix for 71992.
	* CType.java

2004-08-05 Mikhail Khodjaiants
	Restrict the "display as array" operation to the pointer types only.
	* CVariable.java

2004-08-05 Mikhail Khodjaiants
	Warning cleanup.
	* CSharedLibraryManager.java